@@ -2,4 +2,4 @@ package de.tototec.sbuild
 
 import scala.annotation.Annotation
 
-class include(value: Array[String]) extends Annotation 
+class include(value: String*) extends Annotation 
